--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,8 +8,8 @@ joaquin:
   name: Joaquín de Vicente
   avatar: 
   web: 
-  twitter: 
-  github: 
+  twitter: JoaqundeVicente
+  github: JoaquindeVicente
 sergio:
   name: Sergio Rodríguez
   avatar: https://es.gravatar.com/userimage/62146358/77639da6db0c7fe2a2d1ef07db27b812.jpg?size=200
